@@ -332,6 +332,32 @@ EOF
         exit 0
         ;;
 
+    "get-version")
+	version_file="src/tightdb/objc/version.h"
+	tightdb_version_major="$(grep Tightdb_Version_Major $version_file | awk '{print $5}' | tr -d ";")" || exit 1
+	tightdb_version_minor="$(grep Tightdb_Version_Minor $version_file | awk '{print $5}' | tr -d ";")" || exit 1
+	tightdb_version_patch="$(grep Tightdb_Version_Patch $version_file | awk '{print $5}' | tr -d ";")" || exit 1
+	echo "$tightdb_version_major.$tightdb_version_minor.$tightdb_version_patch"
+	exit 0
+	;;
+
+    "set-version")
+	if [ "$OS" != "Darwin" ]; then
+	    echo "You can only set version when running Mac OS X"
+	    exit 1
+	fi
+        tightdb_version="$1"
+        version_file="src/tightdb/objc/version.h"
+        tightdb_ver_major="$(echo "$tightdb_version" | cut -f1 -d.)" || exit 1
+        tightdb_ver_minor="$(echo "$tightdb_version" | cut -f2 -d.)" || exit 1
+        tightdb_ver_patch="$(echo "$tightdb_version" | cut -f3 -d.)" || exit 1
+
+	sed -i '' -e "s/Tightdb_Version_Major = .*;$/Tightdb_Version_Major = $tightdb_ver_major;/" $version_file || exit 1
+	sed -i '' -e "s/Tightdb_Version_Minor = .*;$/Tightdb_Version_Minor = $tightdb_ver_minor;/" $version_file || exit 1
+	sed -i '' -e "s/Tightdb_Version_Patch = .*;$/Tightdb_Version_Patch = $tightdb_ver_patch;/" $version_file || exit 1
+	exit 0
+	;;
+
     "clean")
         auto_configure || exit 1
         $MAKE clean || exit 1
@@ -599,6 +625,7 @@ Available modes are:
   config clean build build-iphone test test-debug test-gdb test-cover
   show-install install uninstall test-installed install-prod install-devel
   uninstall-prod uninstall-devel dist-copy ios-framework
+  get-version set-version
 EOF
         exit 1
         ;;
